// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Regression test #221 Can handle backspace into hashtag 1`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span
    class="editor-text-hashtag"
  >
    #yolo
  </span>
  <span>
     
  </span>
</p>
`;

exports[`Regression test #221 Can handle backspace into hashtag 2`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span
    class="editor-text-hashtag"
  >
    #yol
  </span>
</p>
`;

exports[`Regression test #221 Can handle delete in hashtag 1`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span
    class="editor-text-hashtag"
  >
    #yolo
  </span>
  <span>
     
  </span>
</p>
`;

exports[`Regression test #221 Can handle delete in hashtag 2`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span
    class="editor-text-hashtag"
  >
    #yolo
  </span>
</p>
`;

exports[`Regression test #221 Can handle space in hashtag 1`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span
    class="editor-text-hashtag"
  >
    #yolo
  </span>
</p>
`;

exports[`Regression test #221 Can handle space in hashtag 2`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span
    class="editor-text-hashtag"
  >
    #yo
  </span>
  <span>
     lo
  </span>
</p>
`;
